# lekha-server

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  docker-compose.prod.yml  docker-compose.yml  justfile
.claude/: CLAUDE.md
.claude/rules/: architecture.md  clients.md  errors.md  handlers.md  models.md  repositories.md  services.md  testing.md  workflow.md
.github/workflows/: deploy.yml  test.yml
migration/: Cargo.toml  README.md
migration/src/: lib.rs  m20241210_000001_create_users_table.rs  m20241222_000001_add_oauth_accounts.rs  m20250102_000001_create_refresh_tokens.rs  m20250103_000001_rename_refresh_token_table.rs
src/: lib.rs  main.rs  openapi.rs
src/clients/: mod.rs
src/clients/gemini/: mock.rs  tests.rs
src/db/: mod.rs
src/entities/: CLAUDE.md  memo.rs  mod.rs  oauth_account.rs  refresh_token.rs  user.rs
src/errors/: service_error.rs
src/handlers/: CLAUDE.md  assist_handler.rs  auth.rs  auth_handler.rs  memo_handler.rs  mod.rs  user_handler.rs
src/models/: assist_dto.rs  memo_dto.rs  mod.rs  user_dto.rs
src/repositories/: CLAUDE.md  mod.rs  oauth_account_repository.rs  refresh_token_repository.rs  user_repository.rs
src/services/: CLAUDE.md  mod.rs  token_service.rs  user_service.rs
src/services/assist_service/: tests.rs
src/services/memo_service/: tests.rs
src/services/user_service/: mod.rs  tests.rs
src/test_utils/: mock_gemini.rs  mock_qdrant.rs  mod.rs
src/utils/: jwt.rs
tests/: memo_api.rs
