[workspace]
members = [".", "migration"]

[package]
name = "inklings-server"
version = "0.1.0"
edition = "2021"

[dependencies]
# Database - SeaORM
sea-orm = { version = "1.1", features = ["sqlx-postgres", "runtime-tokio-native-tls", "macros"] }

# Vector Database - Qdrant
qdrant-client = "1.12"

# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# HTTP client - Gemini API 호출용
reqwest = { version = "0.12", features = ["json"] }

# Environment variables
dotenv = "0.15"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Authentication
jsonwebtoken = "9.0"
tower-cookies = "0.10"
uuid = { version = "1.0", features = ["v4"] }
sha2 = "0.10"
time = "0.3"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Serialization (SeaORM에서 자주 사용)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }

# Web framework - Axum
axum = "0.7"
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }

# OpenAPI / Swagger
utoipa = { version = "5.2", features = ["axum_extras", "chrono"] }
utoipa-swagger-ui = { version = "8.0", features = ["axum"] }

[dev-dependencies]
rand = "0.8"
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
http-body-util = "0.1"
